FLUID-6008: fix contrast in uploading state.

--- a/src/components/uploader/css/Uploader.css
+++ b/src/components/uploader/css/Uploader.css
@@ -330,7 +330,7 @@ html>body .fl-uploader span.fl-uploader-browse {
 
 /* stop upload button */
 .fl-uploader-buttons .fl-uploader-button-stop {
-    background-color: #4F99D3;
+    background-color: #007dba;
     border-color: #2A3990;
 }
 
